# 6502_EMU

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  Makefile  README.md  build  build.sh  clean  cpu.c  cpu.h  instruction.c  instruction.h  test
src/: README.md  bus.c  bus.h  cpu.c  cpu.cpp  cpu.h  cpu.hpp  cpu_defs.h  cpu_emulator.c  cpu_emulator.cpp  cpu_tests.c  cpu_trace.c  debugger.c  debugger.h  disassembler.c  disassembler.h  gamecart.c  gamecart.h  ines.c  ines.h  instruction.c  instruction.h  main.c  nes.c  nes.h  nestest_runner.c  ppu.c  ppu.h  ppu_tests.c
test/: test  test.c  test_instructions.c
test/munit/: munit.h.gch
tests/: CMakeLists.txt  cpu_tests.c  cpu_tests.cpp
tools/: cpu_trace.c
tools/scripts/: dump_chr.py
